--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,4 +63,4 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: gopolut/infra_proj:latest
+          tags: gopolut/infra_proj:latest.v2
