--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,4 +63,22 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: gopolut/infra_proj:latest.v2
+          tags: gopolut/infra_proj:latest.v3
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull gopolut/infra_proj:latest.v3
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 gopolut/infra_proj:latest.v3
