--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,7 @@ jobs:
           push: true
           tags: gopolut/infra_proj:latest.v3
 
+# инструкции для скачивания на боевой сервер обновлённого образа и запуска контейнера
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
