--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: gopolut/infra_proj:latest.v3
+          tags: gopolut/infra_proj:latest.v4
 
 # инструкции для скачивания на боевой сервер обновлённого образа и запуска контейнера
   deploy:
@@ -92,4 +92,7 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен!
+        message: |
+          ${{ github.actor }} created commit:
+          Commit message: ${{ github.event.commits[0].message }}
+          ${{ github.workflow }} успешно выполнен!
